# compact-skel-2d

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/boundary2d/: boundary2d.rs  mod.rs
src/geometry/: geometry_objects.rs  geometry_operations.rs  mod.rs
src/skeleton2d/: mod.rs  skeleton2d.rs  skeleton_persp.rs
